:issue: https://github.com/elastic/beats/issues/
:pull: https://github.com/elastic/beats/pull/

////////////////////////////////////////////////////////////
// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v5.0.0-alpha3...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Metricbeat*

*Packetbeat*

*Topbeat*

*Filebeat*

- Stop following symlink. Symlinks are now ignored: {pull}1686[1686]

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*
- Reset backoff factor on partial ACK. {issue}1803[1803]
- Fix beats load balancer deadlock if max_retries: -1 or publish_async is enabled in filebeat. {issue}1829[1829]
- Fix logstash output with pipelining mode enabled not reconnecting. {issue}1876[1876]
- Empty configuration sections become merge-able with variables containing full path. {pull}1900[1900]
- Fix error message about required fields missing not printing the missing field name. {pull}1900[1900]

*Metricbeat*
- Fix the CPU values returned for each core. {issue}1863[1863]

*Packetbeat*
- Add missing nil-check to memcached GapInStream handler. {issue}1162[1162]
- Fix NFSv4 Operation returning the first found first-class operation available in compound requests. {pull}1821[1821]

*Topbeat*

*Filebeat*

*Winlogbeat*
- Fix issue with rendering forwarded event log records. {pull}1891[1891]

==== Added


*Affecting all Beats*
- Improve error message if compiling regular expression from config files fails. {pull}1900[1900]


*Metricbeat*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*



==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.0.0-alpha3]]
=== Beats version 5.0.0-alpha3
https://github.com/elastic/beats/compare/v5.0.0alpha2...v5.0.0-alpha3[View commits]

==== Breaking changes

*Affecting all Beats*
